--- a/src/style.css
+++ b/src/style.css
@@ -4,14 +4,24 @@
   padding: 0;
 }
 
-#canva {
+canvas {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
-  background-color: #F0F8FF;
+  background-color: transparent;
+}
+
+#bg-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  background-image: linear-gradient(62deg, rgb(142, 197, 252) 0%, rgb(224, 195, 252) 100%);
 }
 
 #scrolled {
@@ -21,7 +31,7 @@
 
 button {
   border-radius: 29px;
-  border: 1px solid #081F2D;
+  border: 1px solid #5172B6;
   color: #fff;
   font-size: 15px;
   padding: 10px 25px;
@@ -31,16 +41,16 @@ button {
 }
 
 button.primary {
-  background-color: #081f2d;
+  background-color: #5172B6;
 }
 
 button.apply {
-  background-color: green;
+  background-color: #56E1AE;
 }
 
 button.remove {
   padding: 10px 14px;
-  background-color: red;
+  background-color: #F46462;
 }
 
 
@@ -49,15 +59,15 @@ button:hover {
 }
 
 button.primary:hover {
-  color: #081F2D;
+  color: #5172B6;
 }
 
 button.apply:hover {
-  color: green;
+  color: #56E1AE;
 }
 
 button.remove:hover {
-  color: red;
+  color: #F46462;
 }
 
 .form-group {
@@ -86,38 +96,3 @@ input {
   width: 50px;
 }
 
-span.line {
-  position: absolute;
-  display: block;
-  width: 4px;
-  background: rgb(2,0,36);
-  transition: opacity 0.3s ease-out;
-  animation: gradientAnimation .5s ease-out infinite;
-}
-
-@keyframes gradientAnimation {
-  0% {
-    background: rgb(2,0,36);
-  }
-  25% {
-    background: rgba(93,93,152,1);
-  }
-  50% {
-    background: rgba(0,212,255,1);
-  }
-  75% {
-    background: rgba(93,93,152,1);
-  }
-  100% {
-    background: rgb(2,0,36);
-  }
-}
-
-/* #canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 1px solid black;
-} */
